src/test/deca/syntax/invalid/created/twoMains1.deca
//

// Autre manière d'avoir plusieurs mains

{
{

}
}
